Fix an animation bug on mobile devices on the landing page

--- a/WebHostLib/static/styles/landing.css
+++ b/WebHostLib/static/styles/landing.css
@@ -271,52 +271,8 @@ html{
 }
 
 @media all and (max-width: 1520px){
-    #landing-clouds #cloud1{
-        animation-name: c1-glide-out;
-        animation-duration: 1s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        left: -400px;
-    }
-
-    #landing-clouds #cloud2{
-        animation-name: c2-glide-out;
-        animation-duration: 1s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        right: -300px;
-    }
-
-    #landing-clouds #cloud3{
-        animation-name: c3-glide-out;
-        animation-duration: 1s;
-        animation-fill-mode: forwards;
-        animation-iteration-count: 1;
-        right: -200px;
-    }
-
-    @keyframes c1-glide-out{
-        from{ left: 10px; }
-        to{
-            left: -400px;
-            display: none;
-        }
-    }
-
-    @keyframes c2-glide-out{
-        from{ right: 82px; }
-        to{
-            right: -300px;
-            display: none;
-        }
-    }
-
-    @keyframes c3-glide-out{
-        from{ right: 24px; }
-        to{
-            right: -200px;
-            display: none;
-        }
+    #landing-clouds #cloud1, #landing-clouds #cloud2, #landing-clouds #cloud3{
+        display: none;
     }
 
     #landing-links{
